--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: '2.2'
 
 services:
     bemodule:
-      container_name: budgetcontrol-ms-name
+      container_name: budgetcontrol-ms-budget
       image: mlabfactory/php8-apache:v1.0-xdebug
       ports:
         - "8084:80" # Change port do container
