--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 APP_NAME="Budget Control"
+APP_ENV=
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_USERNAME=
 MYSQL_ROOT_PASSWORD=
 CACHE_REDIS_PASSWORD=
+LOGTAIL_API_KEY=
