--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         "doctrine/dbal": "^4.0",
         "symfony/var-dumper": "^7.0",
         "ramsey/uuid": "^4.7",
-        "monolog/monolog": "^3.5",
         "vlucas/phpdotenv": "^5.6",
         "illuminate/database": "^11.0",
         "laravel/serializable-closure": "^1.3",
@@ -33,7 +32,8 @@
         "illuminate/filesystem": "^11.0",
         "nesbot/carbon": "^3.2",
         "mlab/math-percentage": "^1.0",
-        "illuminate/validation": "^11.7"
+        "illuminate/validation": "^11.7",
+        "logtail/monolog-logtail": "^3.1"
     },
     "require-dev": {
         "nikic/php-parser": "^5.0",
