--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           with:
               username: 'root'
               server: 'app.budgetcontrol.cloud'
-              #ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
+              ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
               password: ${{ secrets.SFTP_PASSWORD }} 
               local_path: '.'
               remote_path: '/var/www/budgetcontrol/Core/Microservices/Budget'
