--- a/.github/workflows/php-test.yml
+++ b/.github/workflows/php-test.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: Test application
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
