--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
               ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} 
               password: ${{ secrets.SFTP_PASSWORD }} 
               local_path: '.'
-              remote_path: '/var/www/budgetcontrol/Core/Microservices/Budget'
+              remote_path: '/var/www/budgetcontrol/Core/microservices/Budget'
               sftpArgs: '-o ConnectTimeout=5'
 
         - name: executing composer install
@@ -35,5 +35,5 @@ jobs:
             username: ${{ secrets.SFTP_USER }}
             password: ${{ secrets.SFTP_PASSWORD }}
             port: 22
-            script: docker exec budgetcontrol-ms-jobs composer install
+            script: docker exec budgetcontrol-ms-budget composer install
   
