hotfix on cryptev values

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         "illuminate/validation": "^11.7",
         "logtail/monolog-logtail": "^3.1",
         "budgetcontrol/seeds": "^v0.1",
-        "budgetcontrol/library": "^v1.3"
+        "budgetcontrol/library": "^v1.3",
+        "budgetcontrol/cryptable": "^0.1.0"
     },
     "require-dev": {
         "nikic/php-parser": "^5.0",
