--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -4,9 +4,13 @@ on:
   push:
     tags:
       - 'v*.*.*'
+      
+  workflow_dispatch:
 
 jobs:
   build:
+    environment: docker-prod
+    name: deploy
     runs-on: ubuntu-latest
 
     steps:
