--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "logtail/monolog-logtail": "^3.1",
         "budgetcontrol/seeds": "^v0.1",
         "budgetcontrol/library": "^v1.3",
-        "budgetcontrol/cryptable": "^0.1.0"
+        "budgetcontrol/cryptable": "^0.1.0",
+        "bref/bref": "~2.4.1"
     },
     "require-dev": {
         "nikic/php-parser": "^5.0",
